--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.2",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
