--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
