--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.6",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "tailwind-merge": "^2.3.0"
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
