--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.7.0",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
     "react": "18.3.1",
