--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.7.0",
     "@types/axios": "^0.14.0",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "react": "18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
     "remark-gfm": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "zustand": "^5.0.0"
   },
